<?xml version="1.0" encoding="utf-8"?>
<!--
  Analytical Engine Labs (AEL) - Tier II Commercial Hybrid Shield License
  License ID: AEL-COMM-2026-HYBRID

  Licensed exclusively under the Analytical Engine Labs Commercial
  Hybrid Shield Agreement for proprietary, closed-source, or monetized deployment.

  Copyleft obligations under GNU GPLv3 are waived for this build instance.
  Confidential & Proprietary - Analytical Engine Labs
-->
<resources>
    <string name="app_name">website</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_downloads">Downloads</string>

    <string name="title_downloads">Downloads</string>
    <string name="msg_downloads_placeholder">Your downloads will appear here later.</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="menu_licensing">Licensing</string>
    <string name="licensing_title">AEL Licensing Hub</string>
    <string name="licensing_dual_model_desc">Analytical Engine Website enforces a transparent dual-licensing strategy. Open-source derivatives are governed by the GNU GPLv3, while commercial applications utilize the Tier II Commercial Hybrid Shield.</string>
    <string name="licensing_path_a_title">Path A: GNU GPLv3</string>
    <string name="licensing_path_a_desc">Free for academic, personal, and open-source applications. All derivative work must remain open source.</string>
    <string name="licensing_path_b_title">Path B: Commercial Hybrid Shield</string>
    <string name="licensing_path_b_desc">Required for monetized, closed-source applications to bypass GPLv3 copyleft obligations.</string>
    <string name="licensing_enterprise_inquiry">Inquire Enterprise Commercial Shield</string>
</resources>
