<?xml version="1.0" encoding="utf-8"?>
<!--
  Analytical Engine Labs (AEL) - Tier II Commercial Hybrid Shield License
  License ID: AEL-COMM-2026-HYBRID

  Licensed exclusively under the Analytical Engine Labs Commercial
  Hybrid Shield Agreement for proprietary, closed-source, or monetized deployment.

  Copyleft obligations under GNU GPLv3 are waived for this build instance.
  Confidential & Proprietary - Analytical Engine Labs
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="?attr/colorPrimaryContainer"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/nav_header_desc"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/nav_header_title"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorOnPrimaryContainer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnPrimaryContainer" />
</LinearLayout>